@@ -650,6 +650,12 @@ public Message<?> messageReturn(String in) {
 }
 ----
 
+=== Original Record Key in Reply
+
+Starting with version 3.3, the Kafka record key from the incoming request (if it exists) will be preserved in the reply record.
+This is only applicable for single record request/reply scenario.
+When the listener is batch or when the return type is a collection, it is up to the application to specify which keys to use by wrapping the reply record in a `Message` type.
+
 [[aggregating-request-reply]]
 == Aggregating Multiple Replies
 
