@@ -34,3 +34,9 @@ For more details, see xref:kafka/receiving-messages/filtering.adoc[Message recei
 
 The `ConcurentContainerMessageListenerContainer` emits now a `ConcurrentContainerStoppedEvent` when all of its child containers are stopped.
 For more details, see xref:kafka/events.adoc[Application Events] and `ConcurrentContainerStoppedEvent` Javadocs.
+
+[[x33-original-record-key-in-reply]]
+=== Original Record Key in Reply
+
+When using `ReplyingKafkaTemplate`, if the original record from the request contains a key, then that same key will be part of the reply as well.
+For more details, see xref:kafka/sending-messages.adoc[Sending Messages] section of the reference docs.
